tests/snapshots/errors/pop_empty_array.mc
var v: vec<any> = vec_new();
let x = v.pop();
print(x);
